# cql-lint

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
Formula/: cql-lint.rb
src/: diagnostic.rs  lib.rs  main.rs
src/lexer/: mod.rs  token.rs
src/linter/: known_functions.rs  mod.rs  rule.rs
src/linter/rules/: ambiguous_precedence.rs  filter_order.rs  missing_args.rs  mod.rs  pipe_style.rs  syntax_error.rs  unknown_function.rs  wildcard_only_filter.rs
src/parser/: ast.rs  mod.rs
testdata/: aggregate_detection.logscale  all_rules.logscale  base64_decode.logscale  case_behavior_weight.logscale  case_size_convert.logscale  complex_valid.logscale  dns_tld_extract.logscale  endpoint_monitor.logscale  failed_logon_threshold.logscale  frequency_analysis.logscale  geohash_login.logscale  impossible_travel.logscale  join_parent_child.logscale  json_parse_enrich.logscale  lateral_movement.logscale  match_rfm_state.logscale  match_severity.logscale  precedence.logscale  process_run_time.logscale  soc_efficiency.logscale  syntax_error.logscale  unknown_func.logscale  valid.logscale
