[package]
name = "cql-lint"
version = "0.1.1"
edition = "2024"
description = "A linter for CrowdStrike LogScale query language"
license = "MIT"
repository = "https://github.com/hiboma/cql-lint"
readme = "README.md"
keywords = ["logscale", "crowdstrike", "linter", "cql"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85"

[dependencies]
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
